--- a/en/w/whateves.803479.wikitext
+++ b/en/w/whateves.803479.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Interjection===
-'''whateves'''
+{{head|en|interjection}}
 
-# {{alternative spelling of|whatevs}}
+# {{alternative spelling of|whatevs|lang=en}}
