--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -102,7 +102,7 @@
 ====Noun====
 {{en-noun|?}}
 
-# {{context|dated|lang=en}} A [[tape]] of [[silk]], [[cotton]], or [[ribbon]], used to tie [[document]]s, clothing, etc.
+# {{context|dated|lang=en}} A [[tape]] of [[silk]], [[cotton]], or [[ribbon]], used to tie [[document]]s, clothing, etc. or along the edge of fabric.
 #* Charles Dickens, ''Bleak House''
 #*: red tape and green '''ferret'''
 
