--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -57,8 +57,8 @@
 * Slovak: {{t-|sk|lasica}}
 * Slovene: {{t+|sl|podlasica}}
 * Sorbian:
-*: Lower Sorbian: {{t0|dsb|łasyca}}, {{t0|dsb|łasycka}}
-*: Upper Sorbian: {{t-|hsb|kohlica}}
+*: Lower Sorbian: {{t0|dsb|łasyca|f}}, {{t0|dsb|łasycka|f}}
+*: Upper Sorbian: {{t-|hsb|kohlica|f}}
 * Spanish: {{t-|es|mostela|f}}
 * Swedish: {{t-|sv|vessla}}
 * Turkish: {{t+|tr|gelincik}}
