--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -18,18 +18,19 @@ From {{etyl|la|en}} {{term|species|speciēs|appearance; quality|lang=la}}, from 
 #*: What is called spiritualism should, I think, be called a mental '''species''' of materialism.
 # A group of plants or animals having [[similar]] [[appearance]].
 #* {{quote-magazine|date=2012-01
-|author=Donald Worster
-|title=A Drier and Hotter Future
-|volume=100|issue=1|page=70
-|magazine=[[w:American Scientist|American Scientist]]
-|url=http://www.americanscientist.org/bookshelf/pub/a-drier-and-hotter-future
+|author=Donald Worster|volume=100|issue=1|page=70|magazine={{w|American Scientist}}
+|title=[http://www.americanscientist.org/bookshelf/pub/a-drier-and-hotter-future A Drier and Hotter Future]
 |passage=Phoenix and Lubbock are both caught in severe drought, and it is going to get much worse. We may see many such [dust] storms in the decades ahead, along with '''species''' extinctions, radical disturbance of ecosystems, and intensified social conflict over land and water. Welcome to the Anthropocene, the epoch when humans have become a major geological and climatic force.}}
-#: ''This '''species''' of animal is unique to the area.''
+#: {{usex|lang=en|This '''species''' of animal is unique to the area.}}
 # {{context|biology|taxonomy|lang=en}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
-#* Darwin, ''On the Origin of '''Species''''':
-#*: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.''
+#* {{w|Charles Darwin}}, ''{{w|On the Origin of Species|On the Origin of '''Species'''}}'':
+#*: Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.
 #* {{RQ:Schuster Hepaticae V|vii}}
 #*: Firstly, I continue to base most '''species''' treatments on personally collected material, rather than on herbarium plants.
+#*{{quote-magazine|year=2013|month=May-June|author=[http://www.americanscientist.org/authors/detail/david-van-tassel David Van Tassel], [http://www.americanscientist.org/authors/detail/lee-dehaan Lee DeHaan]
+|title=[http://www.americanscientist.org/issues/feature/2013/3/wild-plants-to-the-rescue Wild Plants to the Rescue]
+|volume=101|issue=3|magazine={{w|American Scientist}}
+|passage=Plant breeding is always a numbers game.{{...}}The wild '''species''' we use are rich in genetic variation, and individual plants are highly heterozygous and do not breed true. In addition, we are looking for rare alleles, so the more plants we try, the better.}}
 # {{context|mineralogy|lang=en}} A [[mineral]] with a unique chemical formula whose [[crystals]] belong to a unique crystallographic system.
 # {{context|obsolete|lang=en}} The [[image]] of something cast on a surface, or [[reflected]] from a surface, or [[refracted]] through a [[lens]] or [[telescope]]; a [[reflection]].
 #: ''I cast the '''species''' of the Sun onto a sheet of paper through a telescope.''
