--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -52,7 +52,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term|blawa
 #: ''I '''blew''' $35 thou on a car.''
 #: ''We '''blew''' an opportunity to get benign corporate sponsorship.''
 # {{context|transitive|vulgar|lang=en}} To [[fellate]].<!--accomplishment/activity-->
-#: ''Whom did you have to '''blow''' to get those backstage passes?''
+#: ''Who did you have to '''blow''' to get those backstage passes?''
 # {{context|transitive|lang=en}} To [[leave]].<!--accomplishment/achievement-->
 #: ''Let's '''blow''' this joint.''
 # To make [[flyblown]], to defile, especially with fly eggs.
