--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -18,6 +18,7 @@
 ====See also====
 * {{el-l|εβραϊκά|tr=evraïka|gloss=Hebrew language}}
 
+[[Category:el:Biblical characters]]
 [[Category:el:Countries]]
 
 [[az:Ισραήλ]]
