--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -5,8 +5,9 @@
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈkɒl.i.flaʊ.ə/|/ˈkɒl.ɪ.flaʊ.ə/|lang=en}}
 * {{audio|En-au-cauliflower.ogg|Audio (Australia)}}
-* {{a|US}} {{IPA|/ˈkɑl.əˌflaʊ.ɚ/|lang=en}}
-* {{audio|En-us-cauliflower.ogg|Audio (US)}}
+* {{a|US}} {{IPA|/ˈkɔl.ɪˌflaʊ.ɚ/|lang=en}}, {{IPA|/ˈkɑl.əˌflaʊ.ɚ/|lang=en}}
+* {{audio|En-us-ne-cauliflower.ogg|Audio (US)}}
+* {{audio|En-us-cauliflower.ogg|Audio (US cot-caught merged)}}
 
 ===Noun===
 {{en-noun}}
