--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -1,12 +1,12 @@
 ==English==
 
 ===Etymology===
-From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah]], Hebrew ''secharyah'' "[[Yahweh]] has remembered".
+From the New Testament Greek form of the figure's name in the Old Testament, {{term|||Yahweh has remembered|lang=he}}. Compare [[Zachariah]] and [[Zechariah]].
 
 ===Proper noun===
 {{en-proper noun}}
 
-# {{context|biblical character|lang=en}} The father of [[John the Baptist]].
+# The father of [[John the Baptist]]. {{qualifier|biblical character}} [[Category:en:Biblical characters]]
 # {{given name|male|from=Hebrew}}.
 
 ====Translations====
@@ -39,7 +39,7 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 ===Proper noun===
 {{head|de|proper noun}}
 
-# {{context|biblical character|lang=de}} [[#English|Zacharias]]
+# [[#English|Zacharias]] {{qualifier|biblical character}} [[Category:de:Biblical characters]]
 # {{given name|male|lang=de}}.
 
 [[de:Zacharias]]
