--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|la|en}} {{lena}} {{term|consonantia|lang=la}}
+From {{etyl|fro|en}}, from {{etyl|la|en}} {{lena}} {{term|consonantia|lang=la}}
 
 ===Noun===
 {{en-noun}}
