--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -197,7 +197,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 # [[show]], [[display]]
 # {{context|figuratively|lang=la}} [[vision]], [[dream]], [[apparition]]
 # {{context|figuratively|lang=la}} [[honor]], [[reputation]]
-# {{context|figuratively|lang=la}} a [[kind]], [[quality]], [[#English|species]]
+# {{context|figuratively|lang=la}} a [[kind]], [[quality]], [[species]], [[type]]
 # {{context|legal|later|lang=la}} a [[special]] [[case]]
 
 ====Inflection====
