--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -31,23 +31,23 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term/t|la|mūs}} {{term|Arme
 * Arabic: {{t|ar|قاقم|m|tr=qāqim|sc=Arab}}
 * Armenian: {{t+|hy|կնգում|tr=kngum}}, {{t|hy|սպիտակ աքիս|tr=spitak ak’is}}
 *: Old Armenian: {{t|xcl|ախազ|tr=axaz|sc=Armn}}
-* Basque: [[erbinude zuri]]
+* Basque: {{t|eu|erbinude zuri}}
 * Belarusian: {{t|be|гарнастай|m|tr=harnastáj|sc=Cyrl}}
-* Breton: [[erminig]]
+* Breton: {{t|br|erminig}}
 * Bulgarian: {{t|bg|хермелин|m|tr=hermelin}}
-* Catalan: [[ermini]]
+* Catalan: {{t|ca|ermini}}
 * Chinese:
 *: Mandarin: {{t+|cmn|白鼬|tr=báiyòu|sc=Hani}}
 * Czech: {{t|cs|hranostaj|m}}
 * Danish: {{t+|da|hermelin|c}}, {{t+|da|lækat|c}}
 * Dutch: {{t+|nl|hermelijn|m}}
-* Esperanto: [[ermeno]]
+* Esperanto: {{t|eo|ermeno}}
 * Estonian: {{t|et|kärp}}, {{t|et|lahits}}, {{t|et|hermeliin}}
 * Faroese: {{t|fo|roysikøttur}}
 * Finnish: {{t+|fi|kärppä}}
 * French: {{t+|fr|hermine|f}}
-* Friulian: [[armelin]]
-* Galician: [[armiño]]
+* Friulian: {{t|fur|armelin}}
+* Galician: {{t|gl|armiño}}
 * German: {{t+|de|Hermelin|n}}
 * Greek: {{t+|el|ερμίνα|f|tr=ermína}}
 * Hungarian: {{t+|hu|hermelin}}
@@ -56,25 +56,25 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term/t|la|mūs}} {{term|Arme
 * Italian: {{t|it|ermellino|m}}
 * Japanese: {{t|ja|オコジョ|tr=okojo|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|b'lette|f}}
-* Ladin: [[armelin]]
-* Latin: [[Mustela erminea]] {{f}}
+* Ladin: {{t|lld|armelin}}
+* Latin: {{t|la|Mustela erminea|f}}
 * Latvian: {{t|lv|sermulis|m}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|šermuonėlis}}
-* Lower Sorbian: [[hermelin]]
+* Lower Sorbian: {{t|dsb|hermelin}}
 * Macedonian: {{t|mk|хермелин|m|tr=hermelín}}, {{t|mk|ермелин|m|tr=ermelín}}
-* Maltese: [[ermellin]]
+* Maltese: {{t|mt|ermellin}}
 * Navajo: {{t|nv|dlǫ́ʼiiłgaii}}
 * Norwegian: {{t+|no|røyskatt}}
 * Occitan: {{t|oc|ermina|f}}
 * Polish: {{t+|pl|gronostaj|m}}
 * Portuguese: {{t+|pt|arminho|m}}
-* Romani: [[ermina]] {{f}}
+* Romani: {{t|rom|ermina|f}}
 * Romanian: {{t|ro|hermelina|f}}
-* Romansch: [[ermelin]]
+* Romansch: {{t|rm|ermelin}}
 * Russian: {{t+|ru|горностай|m|tr=gornostáj}}
 * Sami: [[buoidda]]
-* Sardinian: [[ermellinu]]
+* Sardinian: {{t|sc|ermellinu}}
 * Scottish Gaelic: {{t|gd|neas|f}}, {{t|gd|neas mhòr|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|хермелин|m}}, {{t|sh|зердав|m}}
@@ -85,16 +85,16 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term/t|la|mūs}} {{term|Arme
 * Swedish: {{t+|sv|hermelin|c}}, {{t+|sv|lekatt|c}}
 * Turkish: {{t+|tr|as}}, {{t+|tr|kakım}}, {{t+|tr|ermin}}
 * Ukrainian: {{t|uk|горностай|m|tr=hornostáj}}
-* Upper Sorbian: [[hermelin]], [[hronostaj]]
+* Upper Sorbian: {{t|hsb|hermelin}}, {{t|hsb|hronostaj}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|härmin}}, {{qualifier|♂}} {{t|vo|hihärmin}}, {{qualifier|♀}} {{t|vo|jihärmin}}, {{qualifier|♂♀ offspring, young}} {{t|vo|härminül}}, {{qualifier|♂ offspring}} {{t|vo|hihärminül}}, {{qualifier|♀ offspring}} {{t|vo|jihärminül}}
 * Welsh: {{t|cy|carlwm|m}}
-* West Frisian: [[harmeling]]
+* West Frisian: {{t|fy|harmeling}}
 {{trans-bottom}}
 
 {{trans-top|the white fur of this animal}}
 * Bulgarian: {{t|bg|хермелин|m|tr=hermelin}}
 * Czech: {{t|cs|hranostaj|m}}
-* Finnish: [[kärpännahka]], [[hermeliini]]
+* Finnish: {{t|fi|kärpännahka}}, {{t|fi|hermeliini}}
 * French: {{t+|fr|hermine|f}}
 {{trans-mid}}
 * German: {{t+|de|Hermelin|m}}
