--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -62,7 +62,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Czech: {{t+|cs|pan|m}}, {{t+|cs|pán|m}}
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
 * French: {{t+|fr|monsieur|m}}
-* German: [[Herr]] {{g|m}}, [[mein Herr]] {{g|m}} {{gloss|my lord}}
+* German: {{t|de|Herr|m}}, [[mein Herr]] {{g|m}} {{gloss|my lord}}
 * Greek: {{t+|el|κύριος|m}}, [[κύριε]] {{g|m}} ([[vocative case]])
 * Hindi: {{t|hi|श्रीमान|m|tr=śrīmān}}, {{t|hi|श्री|tr=śrī|sc=Deva}}, {{t|hi|सर|m|tr=sar|sc=Deva}}, {{t|hi|साहिब|m|tr=sāhib|sc=Deva}}, {{t|hi|महोदय|m|tr=mahōday|sc=Deva}}
 {{trans-mid}}
@@ -74,7 +74,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Latin: {{t+|la|dominus|m}}, [[domine]] {{g|m}} ([[vocative case]])
 * Macedonian: {{t|mk|господин|m|tr=góspodin}}, {{t|mk|господине|m|tr=gospódine}} ([[vocative case]])
 * Persian: {{t+|fa|آقا|tr=âqâ|sc=fa-Arab}}
-* Polish: [[pan]] {{g|m}}, [[panie]] {{g|m}} ([[vocative case]])
+* Polish: {{t|pl|pan|m}}, [[panie]] {{g|m}} ([[vocative case]])
 * Portuguese: {{t+|pt|senhor|m}}
 * Russian: {{qualifier|obsolete}} {{t+|ru|сударь|m|tr=súdar’}}, {{t+|ru|господин|m|tr=gospodín}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}
 * Spanish: {{t+|es|señor|m}}
@@ -85,7 +85,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 
 {{checktrans-top}}
 * {{ttbc|ca}}: [[senyor]] {{g|m}}
-* French: {{t+|fr|seigneur}} {{g|m}}
+* French: {{t+|fr|seigneur|m}}
 * {{ttbc|it}}: [[signore]] {{g|m}}
 {{trans-mid}}
 * {{ttbc|pt}}: [[senhor]] {{g|m}}
