--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -14,10 +14,10 @@
 {{trans-top|say a prayer of thanks}}
 * Arabic: {{Arab|[[صلاة الشكر لله]]}} {{Arab|[[قبل]] [[أكل|الأكل]] [[بعد|وبعد]]}} {{IPAchar|(ʂállatu š-šúkri li-llāhi [qábla al-’ákli wa-báʕd])}}
 * Finnish: [[lukea]] [[ruokarukous]]
-* French: [[faire la bénédicité]]
-* German: [[das Tischgebet sprechen]]
+* French: {{t|fr|faire la bénédicité}}
+* German: {{t|de|das Tischgebet sprechen}}
 {{trans-mid}}
-* Portuguese: [[dar graças]]
+* Portuguese: {{t|pt|dar graças}}
 * Russian: [[прочесть молитву]] ([[трапеза|перед трапезой]]) (pročést’ molítvu [péred trápezoj])
 * Spanish: {{t|es|bendecir la mesa}}, {{t|es|dar gracias}}
 * Swedish: be {{t+|sv|bordsbön|c}}
