--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -200,6 +200,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Irish: {{t|ga|séid}}
 * Korean: {{t+|ko|불다|tr=bulda|sc=Kore}}
 * Polish: {{t|pl|zdmuchnąć}}
+* Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
 * Russian: {{t+|ru|сдувать|impf|tr=sduvátʹ}}, {{t+|ru|сдуть|pf|tr=sdutʹ}}
 * Scottish Gaelic: {{t|gd|sèid}}
 * Spanish: {{t+|es|soplar}}
@@ -216,6 +217,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Irish: {{t|ga|séid}}
 * Korean: {{t+|ko|불리다|tr=bullida|sc=Kore}}
 * Macedonian: {{t|mk|се вее|tr=se vée}}
+* Portuguese: {{t+|pt|[[ser]] [[soprado]]}}
 * Romanian: {{t|ro|fi purtat}}
 * Vietnamese: {{t+|vi|bay}}
 {{trans-bottom}}
@@ -230,6 +232,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Korean: {{t+|ko|불다|tr=bulda|sc=Kore}}
 {{trans-mid}}
 * Macedonian: {{t|mk|дува|tr=dúva}}
+* Portuguese: {{t+|pt|assoprar}}
 * Romanian: {{t|ro|umfla}}
 * Russian: {{t|ru|выдувать|impf|tr=vyduvátʹ}}, {{t+|ru|выдуть|pf|tr=výdutʹ}}
 * Spanish: {{t+|es|soplar}}
@@ -242,6 +245,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * French: {{t+|fr|jouer}}, {{t+|fr|souffler|alt=souffler (dans)}}
 * Irish: {{t|ga|séid}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|assoprar}}
 * Romanian: {{t|ro|cânta la un instrument}}
 * Scottish Gaelic: {{t|gd|sèid}}
 {{trans-bottom}}
@@ -250,6 +254,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Finnish: {{t+|fi|soida}}
 * Romanian: {{t+|ro|fluiera}}, {{t+|ro|șuiera}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|assoprar}}
 * Scottish Gaelic: {{t|gd|sèid}}
 {{trans-bottom}}
 
@@ -261,6 +266,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Korean: {{t|ko|뿜다|tr=ppumda|sc=Kore}}
 {{trans-mid}}
 * Maori: {{t|mi|pipiha}}
+* Portuguese: {{t+|pt|assoprar}}
 * Scottish Gaelic: {{t|gd|sèid}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t|vi|phun nước}}
@@ -280,7 +286,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Japanese: {{t+|ja|爆発|tr=[[ばくはつ]]する, bakuhatsusuru|alt=爆発する|sc=Jpan}}
 * Korean: {{t+|ko|터지다|tr=teojida|sc=Kore}}
 * Macedonian: {{t|mk|се распрснува|tr=se rasp'rsnuva}}
-* Portuguese: {{t+|pt|explodir}}
+* Portuguese: {{t+|pt|explodir}}, {{t|pt|estourar}}
 * Russian: {{t+|ru|взрываться|impf|tr=vzryvátʹsja}}, {{t+|ru|взорваться|pf|tr=vzorvátʹsja}}, {{t|ru|взлетать на воздух|impf|tr=vzletátʹ na vózduz}}, {{t+|ru|взлететь на воздух|pf|tr=vzletétʹ na vózdux}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|nổ}}
@@ -311,6 +317,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * French: [[être]] {{t+|fr|nul|m}}, [[faire]] {{t+|fr|chier}}
 {{trans-mid}}
 * Korean: {{qualifier|interjection}} {{t+|ko|제기랄|tr=jegiral|sc=Kore}}
+* Portuguese: {{t+|pt|[[ser]] [[ruim]]/[[uma]] [[porcaria]], [[uma]] [[merda]]}}
 * Spanish: {{t|es|apestar}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|tẽn tò}}, {{t+|vi|tẽn}}, {{t+|vi|thẹn thò}}, {{t+|vi|thẹn}}
@@ -343,6 +350,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Persian: {{t|fa|ساک زدن|tr=sâk zadan|sc=fa-Arab}}
 {{trans-mid}}
 * Polish: {{t+|pl|robić loda}}, {{t|pl|lizać pałę}}, {{t|pl|obciągać loda}}, {{t|pl|obciągać fiuta}}, {{t|pl|obciągać chuja}}
+* Portuguese: {{t+|pt|chupar}}
 * Russian: {{t+|ru|сосать|impf|tr=sosátʹ}}, {{t+|ru|отсосать|pf|tr=otsosátʹ}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|пушити|sc=Cyrl}}
@@ -359,6 +367,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * French: {{t+|fr|se casser}}, se {{t+|fr|tirer}}, [[mettre]] les {{t+|fr|voiles}}
 {{trans-mid}}
 * Korean: {{t+|ko|그만두다|tr=geuman-duda|sc=Kore}}
+* Portuguese: {{t+|pt|vazar}}, {{t|pt|sair}}
 * Spanish: {{t+|es|ir}}, {{t+|es|largar}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|bỏ đi}}, {{t+|vi|chuồn}}
