--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -12,6 +12,9 @@ From {{etyl|enm|en}} {{term|beholden|lang=enm}}, from {{etyl|ang|en}} {{term|beh
 {{en-verb|beholds|beholding|beheld|'''[[beheld]]''' or rarely '''[[beholden]]'''}}
 
 # {{context|transitive|lang=en}} To [[see]], or to [[look at]].
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=8
+|passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self again;{{...}}. Now she had come to look upon the matter in its true proportions, and her anticipation of a possible chance of teaching him a lesson was a pleasure to '''behold'''.}}
 
 ====Usage notes====
 Rarely used in informal speech. The past participle [[beholden]] now has a meaning detached from the other forms of the word.
