--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -19,25 +19,28 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 {{en-adv|-}}
 
 # {{context|obsolete|lang=en}} [[back|Back]] in the reverse direction, or to an original starting point. {{defdate|10th-18th c.}}
-#: ''Bring us word '''again'''.''
-#* '''1526''', ''The Bible'', tr. {{w|William Tyndale}}, Matthew 2:
+#: {{usex|lang=en|Bring us word '''again'''.}}
+#* '''1526''', ''The Bible'', tr. {{w|William Tyndale}}, {{w|Gospel of Matthew|Matthew}} 2:
 #*: And after they were warned in ther slepe, that they shulde not go '''ageyne''' to Herod, they retourned into ther awne countre another way.
 # [[back|Back]] (to a former place or state). {{defdate|from 11th c.}}
-#* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
-|chapter=19|url=http://openlibrary.org/works/OL2004261W
-|passage=Meanwhile Nanny Broome was recovering from her initial panic and seemed anxious to make up for any kudos she might have lost, by exerting her personality to the utmost. She took the policeman's helmet and placed it on a chair, and unfolded his tunic to shake it and fold it up '''again''' for him.}}
 #: {{usex|We need to bring the old customs to life '''again'''.|lang=en}}
 #: {{usex|The South will rise '''again'''.|lang=en}}
+#* {{quote-book|year=1963|author={{w|Margery Allingham}}|chapter=19
+|title=[http://openlibrary.org/works/OL2004261W The China Governess]
+|passage=Meanwhile Nanny Broome was recovering from her initial panic and seemed anxious to make up for any kudos she might have lost, by exerting her personality to the utmost. She took the policeman's helmet and placed it on a chair, and unfolded his tunic to shake it and fold it up '''again''' for him.}}
 # {{context|obsolete|lang=en}} [[in return|In return]], as a reciprocal action; [[back]]. {{defdate|13th-19th c.}}
 #* '''1485''', {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book III:
 #*: Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne''' {{...}}
-#* '''1603''', {{w|John Florio}}, translating Michel de Montaigne, ''Essays'', II.31:
+#* '''1603''', {{w|John Florio}}, translating {{w|Michel de Montaigne}}, ''Essays'', II.31:
 #*: So women are never angrie, but to the end a man should '''againe''' be angrie with them, therein imitating the lawes of Love.
 #* '''1621''', {{w|Robert Burton}}, ''{{w|The Anatomy of Melancholy}}'', I.2.4.vii:
 #*: Thus men are plagued with women, they '''again''' with men, when they are of diverse humours and conditions {{...}}
 #* '''1852-3''', {{w|Charles Dickens}}, ''{{w|Bleak House}}''
 #*: As he lies in the light before a glaring white target, the black upon him shines '''again'''{{...}}
 # {{rfv-sense}} Another time; once more. {{defdate|from 14th c.}}
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=8
+|passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self again;{{...}}. Our table in the dining-room became '''again''' the abode of scintillating wit and caustic repartee, Farrar bracing up to his old standard, and the demand for seats in the vicinity rose to an animated competition.}}
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=1
 |title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]|chapter=1
 |passage=Thinks I to myself, &ldquo;Sol, you're run off your course again. This is a rich man's summer &lsquo;cottage&rsquo;&nbsp;[&hellip;].&rdquo; So I started to back away '''again''' into the bushes. But I hadn't backed more'n a couple of yards when I see something so amazing that I couldn't help scooching down behind the bayberries and looking at it.}}
@@ -46,23 +49,23 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 #* '''2010''', Simon Hattenstone, ''The Guardian'', 30 Oct 2010:
 #*: The last sentence is so shocking, I have to read it '''again'''.
 # Over and above a factor of one. {{defdate|from 16th c.}}
-#* '''1908''' December 10, Austin H. Clark, “New Genera and Species of Crinoids”, ''Proceedings of the Biological Society of Washington'', Volume XXI, [http://books.google.com/books?id=uc7RAAAAMAAJ&pg=PA229&dq=again pages 229-230]:
+#* '''1908''' December 10, {{w|Austin Hobart Clark|Austin H. Clark}}, “New Genera and Species of Crinoids”, ''Proceedings of the Biological Society of Washington'', Volume XXI, [http://books.google.com/books?id=uc7RAAAAMAAJ&pg=PA229&dq=again pages 229-230]:
 #*: Cirri <span style="font-variant:small-caps">l-lxxx</span>, 15, about 12mm. long; first two joints short, about twice as broad as long; third about one-third '''again''' [=one and one-third times] as long as broad; fourth and fifth the longest, about half '''again''' [=one and a half times] as long as broad; {{...}}
 # {{non-gloss definition|Used metalinguistically, with the repetition being in the discussion, or in the linguistic or pragmatic context of the discussion, rather than in the subject of discussion.}} {{defdate|from 16th c.}}
 #: {{usex|Great, thanks '''again'''!|lang=en}}
 ## Tell me again, say again; {{non-gloss definition|used in asking a question to which one may have already received the answer, but cannot remember it.}}
-##: ''What's that called, '''again'''?''
+##: {{usex|lang=en|What's that called, '''again'''?}}
 ## I ask again, I say again; {{non-gloss definition|used in repeating a question or statement.}}
-##: '''''Again''', I'm not criticizing, I just want to understand.''
+##: {{usex|lang=en|'''Again''', I'm not criticizing, I just want to understand.}}
 ## Here too, here also, in this case as well; {{non-gloss definition|used in applying a previously made point to a new instance; sometimes preceded by "here".}}
-##: ''Approach B is better than approach A in many respects, but '''again''', there are difficulties in implementing it.''
+##: {{usex|lang=en|Approach B is better than approach A in many respects, but '''again''', there are difficulties in implementing it.}}
 # {{cx|obsolete|lang=en}} In any other place.
 #: {{rfquotek|Francis Bacon}}
-# {{cx|obsolete|lang=en}} [[on the other hand]]
-#* {{rfdate}} Shakespeare
+# {{cx|obsolete|lang=en}} [[on the other hand|On the other hand]].
+#* {{rfdate}} {{w|William Shakespeare}} (1564-1616)
 #*: The one is my sovereign {{...}} the other '''again''' is my kinsman.
 # Moreover; besides; further.
-#* {{rfdate}} Hersche
+#* {{rfdate}} Hersche<!--Herschel??-->
 #*: '''Again''', it is of great consequence to avoid, etc.
 
 ====Derived terms====
