--- a/en/s/sederunt.720251.wikitext
+++ b/en/s/sederunt.720251.wikitext
@@ -10,7 +10,9 @@ From {{etyl|la|en}} {{term|sederunt||there were sitting|lang=la}}.
 
 # {{context|Scotland|lang=en}} A formal [[meeting]], especially of a judicial or ecclesiastical body.
 #*'''1888''', Rudyard Kipling, ‘The Sending of Dana Da’, ''In Black and White'', Folio Society 2005, p. 421:
-#*:They held a '''sederunt''', and were filled with remulous joy, for, in spite of their familiarity with all the other worlds and cycles, they had a very human awe of things sent from Ghostland. <!-- Not 'tremulous'? -->
+#*:They held a '''sederunt''', and were filled with tremulous joy, for, in spite of their familiarity with all the other worlds and cycles, they had a very human awe of things sent from Ghostland.
+#* Prof. Wilson
+#*: 'Tis pity we have not Burn's own account of that long '''sederunt'''.
 # {{context|Scotland|lang=en}} Those people present at such a meeting.
 
 ===Anagrams===
