--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -70,7 +70,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Macedonian: {{t|mk|вотка|f|tr=vótka}}
 * Malay: {{t|ms|vodka}}
 * Maltese: {{t|mt|vodka|f}}
-* {{trreq|Mongolian}}
+* Mongolian: {{t|mn|цагаан архи|sc=Cyrl}}
 * Norwegian: {{t|no|vodka|c}}
 * Ossetian: {{t|os|арахъ|tr=araq|sc=Cyrl}}
 * Persian: {{t+|fa|ودکا|tr=vodkâ}}
