--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -36,7 +36,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * French: {{t+|fr|néanmoins}}
 * Georgian: {{t|ka|მაინც|sc=Geor}}
 * German: {{t+|de|trotzdem}}, {{t+|de|doch}}, {{t+|de|allerdings}}
-* Greek: [[εν τούτοις]] (én tútis), [[παρά ταύτα]] (pará táfta), [[ωστόσο]] (ostóso)
+* Greek: {{t|el|εν τούτοις|tr=én tútis}}, {{t|el|παρά ταύτα|tr=pará táfta}}, {{t|el|ωστόσο|tr=ostóso}}
 * Indonesian: {{t|id|bagaimanapun juga}}
 * Interlingua: {{t|ia|benque}}, {{t|ia|malgrado}}, {{t|ia|non obstante}}
 * Italian: {{t+|it|comunque}}, {{t+|it|nonostante}}, {{t|it|in ogni caso}}, {{t|it|ad ogni modo}}
