--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -11,7 +11,7 @@
 
 ====Translations====
 {{trans-top|full of big talk}}
-* Italian: {{t|it|tutto fumo e niente arrosto}}
+* Italian: {{t|it|tutto fumo e niente arrosto}}, {{t|it|can che abbaia non morde}}
 * Spanish: {{t|es|perro ladrador, poco mordedor}}, {{t|es|mucho ruido y pocas nueces}}
 {{trans-mid}}
 * Swedish: {{t|sv|stor i orden men liten på jorden}}
