--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -8,7 +8,7 @@ From {{etyl|ang|en}} {{term|oter|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pr
 
 ====Pronunciation====
 * {{a|RP}} {{IPA|/ˈɒt.ə/|lang=en}}
-* {{a|US}} {{IPA|/ˈɑtɚ/|[(ʔ)ɑɾɚ]|lang=en}}
+* {{a|US}} {{enPR|ŏtʹər}}, {{IPA|/ˈɑtɚ/|[(ʔ)ɑɾɚ]|lang=en}}
 * {{rhymes|ɒtə(ɹ)|lang=en}}
 
 ====Noun====
