--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -21,7 +21,7 @@
 #* Sir Walter Scott
 #*: Their horses much '''blown'''.
 # Covered with the eggs and larvae of flies; [[flyblown]].
-#{{context|of automotive|lang=en}} Given a [[hot rod]] [[blower]]
+#{{context|automotive|lang=en}} Given a [[hot rod]] [[blower]]
 
 ====Translations====
 {{trans-top|[[distended]], [[swollen]] or [[inflated]]}}
