--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -93,6 +93,7 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 * Russian: {{t+|ru|кровоточить|tr=krovotočít’}} (seldom used, [[иметь кровотечение]] ''imét' krovotečénije'', [[идёт кровь]] ''idjót krov''')
 * Sardinian: {{t|sc|sambenàre}}, {{t|sc|sambenàri}}, {{t|sc|sanguinai}}
 * Scottish Gaelic: {{t|gd|leig fuil}}, {{qualifier|nose}} {{t|gd|leum}}
+* Sicilian: {{t+|scn|sanguniari}}, {{t+|scn|sanguinari}}
 * Slovak: {{t|sk|krvácať}}
 * Slovene: {{t+|sl|krvaveti}}
 * Spanish: {{t+|es|sangrar}}
@@ -101,6 +102,7 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 * Tagalog: {{t|tl|pagdugo}}
 * Thai: {{t|th|ตกเลือด|tr=dtòk lêuat}}
 * Turkish: {{t+|tr|kanamak}} [-ar]
+* Venetian: {{t|vec|sanguenar}}
 * Vietnamese: {{t|vi|chảy máu}}, {{t|vi|xuất huyết}}
 * Volapük: {{t+|vo|bludön}}
 * Welsh: {{t+|cy|gwaedu}}
