--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -45,6 +45,8 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 # {{context|mining|lang=en}} An excavation in rock, transverse to the workings, from which material for filling is obtained.
 # {{context|mining|lang=en}} A passage underground through which ore is shot.
 # A [[milling cutter]].
+# {{context|trading card games}} A card or deck that relies on the strategy of putting cards directly from the draw pile into the discard pile.
+[[Category:en:Magic: The Gathering]]
 
 =====Synonyms=====
 * {{sense|plant, building}} [[factory]], [[works]]
