--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -13,7 +13,7 @@
 * [[silkweed]]
 
 ====Hyponyms====
-* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed|pedia=1}} ({{taxlink|Ascepias syriaca|species|noshow=1}}), {{vern|clasping milkweed|pedia=1}} ({{taxlink|Ascepias amplexicaulis|species|noshow=1}}), {{vern|butterfly milkweed|pedia=1}} ({{taxlink|Ascepias tuberosa|species|noshow=1}}), {{vern|fourleaf milkweed|pedia=1}} ({{taxlink|Ascepias quadrifolia|species|noshow=1}}), {{vern|green comet milkweed|pedia=1}} ({{taxlink|Ascepias viridifolia|species|noshow=1}}), {{vern|poke milkweed|pedia=1}} ({{taxlink|Ascepias exaltata|species|noshow=1}}), {{vern|purple milkweed|pedia=1}} ({{taxlink|Ascepias purpurascens|species|noshow=1}}), {{vern|red milkweed|pedia=1}} ({{taxlink|Ascepias rubra|species|noshow=1}}), {{vern|redring milkweed|pedia=1}} ({{taxlink|Ascepias variegata|species|noshow=1}}), {{vern|swamp milkweed|pedia=1}} ({{taxlink|Ascepias incarnata|species|noshow=1}}), {{vern|whorled milkweed|pedia=1}} ({{taxlink|Ascepias verticillata|species|noshow=1}})
+* {{sense|plants in genus ''Asclepias''}} {{vern|common milkweed|pedia=1}} ({{taxlink|Asclepias syriaca|species|noshow=1}}), {{vern|clasping milkweed|pedia=1}} ({{taxlink|Asclepias amplexicaulis|species|noshow=1}}), {{vern|butterfly milkweed|pedia=1}} ({{taxlink|Asclepias tuberosa|species|noshow=1}}), {{vern|fourleaf milkweed|pedia=1}} ({{taxlink|Asclepias quadrifolia|species|noshow=1}}), {{vern|green comet milkweed|pedia=1}} ({{taxlink|Asclepias viridiflora|species|noshow=1}}), {{vern|poke milkweed|pedia=1}} ({{taxlink|Asclepias exaltata|species|noshow=1}}), {{vern|purple milkweed|pedia=1}} ({{taxlink|Asclepias purpurascens|species|noshow=1}}), {{vern|red milkweed|pedia=1}} ({{taxlink|Asclepias rubra|species|noshow=1}}), {{vern|redring milkweed|pedia=1}} ({{taxlink|Asclepias variegata|species|noshow=1}}), {{vern|swamp milkweed|pedia=1}} ({{taxlink|Asclepias incarnata|species|noshow=1}}), {{vern|whorled milkweed|pedia=1}} ({{taxlink|Asclepias verticillata|species|noshow=1}})
 
 ===External links===
 * {{pedia}}
