--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -1,7 +1,7 @@
-ÁÁ==English==
+==English==
 
 ===Verb===
-{{head|en}}
+{{head|en|present participle}}
 
 # {{present participle of|rat|lang=en}} 
 #: ''Don't go '''ratting''' to the police about what happened.''
@@ -12,6 +12,7 @@
 ===Noun===
 {{en-noun|-}}
 
+# {{context|archaic|lang=en}} an [[illegal]] [[blood sport]] of setting a [[dog]] upon [[rat]]s confined in a [[pit]] to see how many he will kill in a given time.
 # a [[legal]] [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
 
 ===See also===
